--- a/airbitz/airbitz/static/less/home.less
+++ b/airbitz/airbitz/static/less/home.less
@@ -165,12 +165,12 @@ body.home {
 
     @media (max-width: @screen-md) {
         height: auto;
-        margin-top: 118px;
-        padding: 50px 0;
+        margin-top: 0;
+        padding: 140px 0 50px 0;
     }
 
     @media (max-width: @screen-sm) {
-        margin-top: 55px;
+        padding-top: 100px;
     }
 
     /* iPads (landscape) ----------- */
