--- a/airbitz/airbitz/static/less/navbar.less
+++ b/airbitz/airbitz/static/less/navbar.less
@@ -10,8 +10,11 @@
         color: white;
     }
     .navbar-nav>li>a {
-        padding-top: 30px;
-        padding-bottom: 14px;
+
+        @media (min-width: @screen-md-min) {
+            padding-top: 30px;
+            padding-bottom: 14px;
+        }
     }
     .typeahead, .tt-query, .tt-hint {
         padding: 8px 12px;
@@ -41,7 +44,7 @@
     #mobile-nav-close {
 
         position: absolute;
-        top: 0px;
+        top:5px;
         left: -50px;
 //        padding: 2px 6px;
     }
@@ -50,10 +53,10 @@
         float: left;
         
         .navbar-brand {
-            padding-left: 7px;
+            padding: 15px 0 5px 15px;
 
             .logo {
-                height: 20px;
+                height: 30px;
                 margin-right: 10px;
             }
         }
@@ -63,11 +66,12 @@
         position: relative;
         float: left;
         width: auto;
-        margin-left: 15px;
+        margin-left: 25px;
         padding: 0 15px;
 
         .navbar-form {
             float: right;
+            margin-bottom: 5px;
             padding: 2px 0 0 0;
             border-bottom: none;
             border-top: none;
